# photo-scripts

./: .ai-context.md  .gitignore  DEVELOPMENT_HISTORY.md  README.md  SETUP_GUIDE.md  SETUP_TROUBLESHOOTING.md  TEMP_MIGRATION_GUIDE.md  photo-scripts.code-workspace  setenv  setup-system-deps.sh
.devcontainer/: README-SSH.md  README.md  devcontainer.json  post-create.sh
.github/prompts/: consolidated_file_locations.txt  reorg.md  (+3 more)
COMMON/: ARCHITECTURE.md  README.md  activate.sh  common_tasks.py  pyproject.toml  requirements.txt  run  setenv  setenv.py  tasks.py  test report.csv
EXIF/: ANALYZER_COMPARISON.md  ANALYZE_REFACTORING_SUMMARY.md  OPTIONAL_TARGET_ENHANCEMENT.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  TESTING_STRATEGY.md  TEST_COVERAGE.md  activate.sh  pyproject.toml  recover_organize_accident.sh  setenv  setenv.py  tasks.py
IMMICH/: pyproject.toml  reset_dns  tasks.py
VIDEOPROC/: README.md  organize.sh  pyproject.toml  tasks.py
WORKFLOW/: pyproject.toml  run
WORKFLOW/.github/prompts/: WORKFLOW_CONFIRMATION_QUESTIONS.md  WORKFLOW_DATABASE_APPROACH.md  WORKFLOW_IMPLEMENTATION_PLAN.md  WORKFLOW_PEOPLE_XMP_DECISION.md
WORKFLOW/docs/: CACHE_FIELDS.md
WORKFLOW/scripts/: example_script.py  files_to_cache.py  immich_counts.py  immich_to_cache.py
WORKFLOW/src/: cache_store.py  files_to_cache_service.py  immich_client.py  immich_config.py  immich_counts_service.py  immich_to_cache_service.py
WORKFLOW/tests/: test_example_script.py  test_files_to_cache.py  test_immich_counts.py  test_immich_to_cache.py
docs/: ORGANIZATION_SUMMARY.md  README.md
(+206 files in other folders)
